# react-native-sql

./: CONTRIBUTING.md  README.md  package.json  react-native-sql.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativesql/: SqlModule.java  SqlPackage.java
cpp/: react-native-sql.cpp  react-native-sql.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativesql/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativesql/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/SqlExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/SqlExample.xcodeproj/: project.pbxproj
example/ios/SqlExample.xcodeproj/xcshareddata/xcschemes/: SqlExample.xcscheme
example/ios/SqlExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Sql.h  Sql.mm
ios/Sql.xcodeproj/: project.pbxproj
src/: index.tsx
